Styled Single Event page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2935,7 +2935,7 @@ body.single-post {
     color: $primary;
   }
 }
-
+#primary.post-type-events,
 #primary.post-type-stories,
 #primary.post-type-post {
   max-width: 1400px;
