--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2324,6 +2324,12 @@ body.logged-in.admin-bar {
 body.page-template-default {
   .entry-content {
     max-width: 100%!important;
+    h1, h2, h3, h4, h5, h6 {
+      color: $primary;
+    }
+    p {
+      color: $primary;
+    }
   }
 }
 
