--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2325,10 +2325,10 @@ body.page-template-default {
   .entry-content {
     max-width: 100%!important;
     h1, h2, h3, h4, h5, h6 {
-      color: $primary;
+      color: $blue;
     }
     p {
-      color: $primary;
+      color: $blue;
     }
   }
 }
