--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -393,6 +393,29 @@ body.home .wp-block-cover.hero {
       align-content: center;
       color: $lightyellow;
     }
+    .imagecol {
+      figure {
+        margin: 0 0;
+        position: relative;
+        width: 100%;
+        float: left;
+        img.resizer {
+          width: 100%;
+          height: auto;
+          float: left;
+        }
+        img:not(.resizer) {
+          position: absolute;
+          top: 0;
+          left: 0;
+          object-position: 50% 50%;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+          z-index: 5;
+        }
+      }
+    }
     h2, h3, h4, h5, h6 {
       font-family: $font-secondary;
       font-weight: 500;
