--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -541,6 +541,35 @@ body.home .wp-block-cover.hero {
       position: relative;
       min-height: unset!important;
       margin-bottom: 20px;
+      transition: all ease .3s;
+      &:hover {
+        box-shadow: 0 7px 15px rgba(0,0,0,.21);
+      }
+    }
+    a.pagelink {
+      display: block;
+      width: 100%;
+      float: left;
+      position: relative;
+      z-index: 10;
+      // &:before {
+      //   content:"";
+      //   display: block;
+      //   width: 100%;
+      //   height: 100%;
+      //   position: absolute;
+      //   top: 0;
+      //   left: 0;
+      //   opacity: 0;
+      //   box-shadow: 0 0 0 rgba(0,0,0,0.13) inset;
+      //   transition: all ease .3s;
+      // }
+      &:hover, &:focus {
+        &:before {
+          opacity: 1;
+          box-shadow: 0 0 50px rgba(0,0,0,0.15) inset;
+        }
+      }
     }
     p {
       margin-top: 0;
