--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -3351,125 +3351,69 @@ body.post-type-archive-tribe_events {
 }
 
 .custom-calendar-filter {
-  width: 220px;
-  position: relative;
-  .resetLink {
-    display: inline-block;
-    position: absolute;
-    top: 7px;
-    left: -62px;
-    color: $secondary;
-    font-size: 15px;
-    line-height: 1.2;
-  }
-  .event-category-dropdown {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    margin-right: 15px;
-    .selectBox {
-      display: inline-flex;
-      align-items: center;
-      text-align: center;
-      border: 1px solid #606060;
-      color: #000;
-      padding: 10px 12px;
-      width: 100%;
-      height: 35px;
+  ul#legend {
+    margin: 0 0;
+    padding: 0 0;
+    list-style: none;
+    display: flex;
+    a {
+      text-decoration: none;
+      display: block;
+      padding: 11px 8px 10px;
       font-size: 14px;
-      line-height: 1;
-      position: relative;
-      appearance: none;
-      border-radius: 0;
-      box-shadow: none;
-      appearance: none;
-      background: #FFF;
-      @media screen and (max-width:500px) {
-        font-size: 12px;
-        width: 160px;
-        float: right;
-      }
-      &:after {
-        content: "";
-        display: block;
-        width: 0;
-        height: 0;
-        border-top: 6px solid #939393;
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        position: absolute;
-        top: 14px;
-        right: 13px;
-        transition: transform ease .4s;
-      } 
-      &.open {
-        &:after {
-          transform: rotate(180deg);
-        }
+      &:hover, &:focus {
+        background-color: rgba(0,0,0,.11);
       }
     }
-    
-    #legend_box {
-      visibility: visible;
-      position: absolute;
-      top: 34px;
-      right: 0;
-      background: #FFF;
-      border: 1px solid #606060;
-      padding: 2px 4px;
-      width: 100%;
+    li:first-child {
       display: none;
-      ul {
-        margin: 0 0!important;
-        padding: 0 0!important;
-        overflow: hidden;
+    }
+    li {
+      margin: 3px;
+      padding: 0 0!important;
+      border-right: none!important;
+      transition: transform ease .3s;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+        transform: translateY(-2px);
       }
-      ul, li {
-        width: 100%;
-      }
-      li {
-        margin: 3px 0!important;
-        padding: 0 0!important;
-        a {
-          display: block;
-          background: #FFF;
-          padding: 8px 8px!important;
-          color: #000;
-          position: relative;
-          left: 8px;
-          text-align: left;
-          font-size: 15px;
-          font-weight: normal;
-          line-height: 1.2;
-          border-bottom: 1px solid #CCC;
-        }
-        &.active a {
-          color: #FFF;
-          background-color: transparent;
-          border-bottom: none;
-        }
-        &.teccc-reset.active {
-          a {
-            color: #000!important;
-          }
-        }
-      }
-      li:not(.teccc-reset):hover a {
-        left: 15px;
-      }
-      li.teccc-reset a {
-        left: 0 !important;
-        border-bottom: none !important;
-        color: #e35613;
-        text-align: center;
-        padding: 5px 0!important;
-      }
-      li.teccc-reset {
-        display: none!important;
-      }
-      #legend li.last a {
-        border-bottom: none!important;
-      }
+    }
+  }
+}
+
+.otherFilters .tribe-events-c-events-bar__filter-button-container,
+.otherFilters .tribe-events-c-view-selector,
+.otherFilters .tribe-events-c-events-bar__views {
+  display: inline-flex!important;
+  align-items: center;
+}
+
+@media screen and (max-width: 1080px) {
+  .filterWrapper .filterInner {
+    position: relative;
+    top: 40px;
+    left: 0!important;
+    flex-wrap: wrap;
+    align-items: center;
+    .otherFilters {
+      margin-top: 8px;
+    }
+  }
+  .custom-calendar-filter {
+    ul#legend {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .filterWrapper .filterInner {
+    .otherFilters {
+      margin-top: 20px;
     }
   }
 }
@@ -3707,21 +3651,6 @@ body.post-type-archive-tribe_events {
       position: relative;
       top: 35px;
       left: 38px;
-    }
-    .custom-calendar-filter {
-      width: 160px;
-      .event-category-dropdown  {
-        width: 100%;
-        margin-right: 0;
-        .selectBox {
-          width: 100%;
-        }
-        #legend_box {
-          width: 244px;
-          right: unset;
-          left: 0;
-        }
-      }
     }
   }
 }
