--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2121,11 +2121,16 @@ div.checklist {
       }
     }
     @media screen and (max-width: 820px) {
+      .textRight {
+        border-top: 2px solid $primary;
+        padding-top: 30px!important;
+      }
       .flexwrap {
         &:after {
-          width: 100%;
-          height: 2px;
-          top: 53%;
+          // width: 100%;
+          // height: 2px;
+          // top: 53%;
+          display: none;
         }
       }
     }
