Made changes on about us page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2124,6 +2124,7 @@ div.checklist {
       .textRight {
         border-top: 2px solid $primary;
         padding-top: 30px!important;
+        margin-top: 30px;
       }
       .flexwrap {
         &:after {
