Made some changes on News and Events page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -4152,6 +4152,10 @@ body.home.sticky-header {
   }
 }
 
+.subpageHero.bluebg {
+  background-color: $primary;
+}
+
 body.error404 {
   #main.wrapper {
     max-width: 1400px;
