Made some changes on News and Events page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1474,6 +1474,7 @@ footer.site-footer {
     align-items: center;
     z-index: 10;
     text-align: center;
+    .big-title,
     h1 {
       font-size: 5rem;
       font-weight: 500;
