--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -4157,6 +4157,88 @@ body.home.sticky-header {
   background-color: $primary;
 }
 
+//Announcement Bar
+.announcement {
+  position: relative;
+  background: $blue;
+  color: #FFF;
+  display: none;
+  &.show {
+    display: block;
+  }
+  .announcementInner {
+    position: relative;
+    padding: 13px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .announcementText {
+    max-width: 95vw;
+    width: 100%;
+    margin: 0 auto;
+    font-size: 0.95em;
+    line-height: 1.3;
+    padding-right: 20px;
+  }
+  p {
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
+  p:first-child {
+    margin-top: 0;
+  }
+  p:last-child {
+    margin-bottom: 0;
+  }
+  #announcementBarClose {
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    position: absolute;
+    top: 13px;
+    right: 15px;
+    opacity: 0.75;
+    z-index: 20;
+    &:before, &:after {
+      content: "";
+      display: block;
+      width: 80%;
+      height: 2px;
+      background: #fff;
+      position: absolute;
+      top: 9px;
+      left: 2px;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+    &:hover, &:focus {
+      opacity: 1;
+    }
+  }
+  .alignleft {
+    float: left;
+    margin-right: 20px;
+  }
+  .alignright {
+    float: right;
+    margin-left: 20px;
+  }
+  .aligncenter {
+    text-align: center;
+    margin: 0 auto;
+  } 
+  img {
+    width: auto;
+    height: 38px;
+  }
+}
+
 body.error404 {
   #main.wrapper {
     max-width: 1400px;
