--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2341,7 +2341,8 @@ body:not(.home) {
     }
 
     #main {
-      max-width: calc($wrapper + 60px);
+      // max-width: calc($wrapper + 60px);
+      max-width: 1100px;
       width: 100%;
       margin: 0 auto;
       padding: 60px 20px;
