--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -4394,7 +4394,10 @@ a img.alignright {float:right; margin:0 0 1em 1em}
 a img.alignleft {float:left; margin:0 1em 1em 0}
 a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
 
-
+.repeatable .gform_wrapper.gform-theme--no-framework,
+.repeatable .gform_wrapper {
+  display: block!important;
+}
 .repeatable--2 {
   padding-top: 40px;
 }
