--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -4397,6 +4397,7 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
 .repeatable .gform_wrapper.gform-theme--no-framework,
 .repeatable .gform_wrapper {
   display: block!important;
+  text-align: initial;
 }
 .repeatable--2 {
   padding-top: 40px;
